[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/welcome_back_popup.gd" id="1"]

[node name="WelcomeBackPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="EarningsLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "While you were away..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="ClaimButton" type="Button" parent="VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Claim"

[node name="DoubleButton" type="Button" parent="VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Watch Ad for 2x"
